[package]
name = "hana"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
shuttle-actix-web = "0.27.0"
shuttle-runtime = "0.27.0"
tokio = "1.26.0"