[package]
name = "hana"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
shuttle-actix-web = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.26.0"
serde_json = "1.0.108"
serde = "1.0.190"
futures = "0.3.29"
shuttle-turso = "0.34.0"
libsql-client = "0.31.11"
shuttle-secrets = "0.34.0"
shuttle-service = "0.34.0"
reqwest = { version = "0.11.22", features = ["json"] }
