[package]
name = "hana"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
tokio = "1.34.0"
serde_json = "1.0.108"
serde = "1.0.193"
futures = "0.3.29"
libsql-client = "0.31.11"
reqwest = { version = "0.11.22", features = ["json"] }
dotenv = "0.15.0"
url = "2.5.0"